--- a/style.css
+++ b/style.css
@@ -166,31 +166,31 @@ nav {
 }
 
 .item-pro-1 {
-    
+    box-shadow: 0 1px 5px rgb(0, 0, 0);
     grid-column: 1 / 2;
     grid-row: 1 / 3;
 }
 
 .item-pro-2 {
-    
+    box-shadow: 0 1px 5px rgb(0, 0, 0);
     grid-column: 2 / 4;
     grid-row: 1 / 2;
 }
 
 .item-pro-3 {
-    
+    box-shadow: 0 1px 5px rgb(0, 0, 0);
     grid-column: 4 / 5;
     grid-row: 1 / 2;
 }
 
 .item-pro-4 {
-    
+    box-shadow: 0 1px 5px rgb(0, 0, 0);
     grid-column: 2 / 3;
     grid-row: 2 / 3;
 }
 
 .item-pro-5 {
-    
+    box-shadow: 0 1px 5px rgb(0, 0, 0);
     grid-column: 3 / 5;
     grid-row: 2 / 3;
 }
