--- a/style.css
+++ b/style.css
@@ -11,20 +11,29 @@
 }
 
 nav {
-    /* border: 1px solid red; */
+    background: #000;
+    color: white;
+    padding: 10px
+        /* border: 1px solid red; */
 }
 
 .container {
-    max-width: 1890px;
+    max-width: 1200px;
     margin: 0 auto;
-    padding: 0 50px;
+    /* padding: 0 40px; */
+}
+
+.logo {
+    font-size: 20px;
+    /* padding: 0 15px; */
+    width: 200px;
 }
 
 .navbar-con {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 0;
+
 }
 
 .menu ul {
@@ -32,24 +41,33 @@ nav {
 }
 
 .menu ul li {
+    padding: 0px 15px;
     list-style: none;
 
 }
 
 .menu ul li a {
-    list-style: none;
+    /* list-style: none; */
     text-decoration: none;
-    color: #000;
-    padding: 18px;
+    color: #ffffff;
+    padding: 20px;
 }
 
-.menu-icon a {
-    padding: 15px;
-    color: #000;
+.menu-icon ul {
+    width: 200px;
+    display: flex;
+    justify-content: end;
+
 }
 
-.menu-icon a i {
-    font-size: 18px;
+.menu-icon ul li {
+    list-style: none;
+}
+
+.menu-icon ul li a {
+    color: #ffffff;
+    text-decoration: none;
+    padding: 0 20px;
 }
 
 .hero-con1 {
@@ -114,19 +132,23 @@ nav {
 .item-con {
     /* max-width: 700px; */
     /* margin: 0 auto; */
-    margin: 15px 0;
+    margin: 10px auto;
+    /* width: 1200px; */
     /* border: 1px solid red; */
 }
 
 .card-items {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    padding: 20px;
+    gap: 100px;
+    /* width: 1200px; */
 }
 
 .item-1 {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     padding: 10px 15px;
     border: 1px solid black;
@@ -148,8 +170,8 @@ nav {
 }
 
 .products-con {
-    width: 1550px;
-    margin: 0 auto;
+    max-width: 1200px;
+    margin: 20px auto;
 
 }
 
@@ -157,12 +179,7 @@ nav {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 300px 300px;
-    column-gap: 10px;
-    row-gap: 10px;
-    margin: 20px 0;
-    /* border: 1px solid red; */
-    /* padding: 50px; */
-    /* border: 1px solid red; */
+    gap: 10px;
 }
 
 .item-pro-1 {
@@ -276,51 +293,116 @@ nav {
     color: #525252;
 }
 
-@media only screen and (max-width:425px) {
-    .container {
-        width: 100%;
-        height: 100%;
-    }
-    .product-con {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        /* grid-template-rows: repeat(2, 1fr); */
-        margin: 20px auto;
-        gap: 50px;
-        width: 1300px;
-        
-    }
-
-    .navbar-top-prod {
-        width: 1300px;
-    }
-
-    .hero-con1 {
-        width: 1500px;
-        height: 700px;
-        /* margin: 0 auto; */
-        padding: 50px 60px;
-    }
-
-    .item-con {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 1500px;
-    }
-
-    .card-items {
-        /* display: flex; */
-        flex-direction: column;
-        padding: 20px 30px;
-        gap: 20px;
-        /* align-items: center; */
-        /* justify-content: center; */
-        /* margin: 0 auto; */
+@media only screen and (max-width:430px) {
+    .menu {
+        display: none;
     }
 
     .product-items {
-        display: flex;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(5, 1fr);
+        /* column-gap: 10px; */
+        padding: 10px;
+        /* row-gap: 20px; */
+        /* gap: 10px; */
+    }
+
+    .item-pro-1 {
+        box-shadow: 0 1px 5px rgb(0, 0, 0);
+        grid-column: 1;
+        grid-row: 1 / 2;
+    }
+
+    .item-pro-2 {
+        box-shadow: 0 1px 5px rgb(0, 0, 0);
+        grid-column: 1;
+        grid-row: 2 / 3;
+    }
+
+    .item-pro-3 {
+        box-shadow: 0 1px 5px rgb(0, 0, 0);
+        grid-column: 1;
+        grid-row: 3 / 4;
+    }
+
+    .item-pro-4 {
+        box-shadow: 0 1px 5px rgb(0, 0, 0);
+        grid-column: 1;
+        grid-row: 4 / 5;
+    }
+
+    .item-pro-5 {
+        box-shadow: 0 1px 5px rgb(0, 0, 0);
+        grid-column: 1;
+        grid-row: 5 / 6;
+    }
+
+    .img-pro {
+        width: 100%;
+        height: 300px;
+        /* height: 300px; */
+        overflow: hidden;
+    }
+
+    .img-pro img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .product-con {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, 1fr);
+        /* column-gap: 10px; */
+        /* row-gap: 10px; */
+        margin: 30px 80px;
+        gap: 20px;
+
+    }
+
+    .card-items {
         flex-direction: column;
+        gap: 10px;
+    }
+
+    .navbar-top-prod {
+        font-size: 12px;
+    }
+
+    .menus-prod {}
+
+    .hero-con1 {
+        background-image: url('https://images.unsplash.com/photo-1529359744902-86b2ab9edaea?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 500px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* border: 1px solid red; */
+
+    }
+
+    .hero-con2 {
+        /* width: 600px; */
+        /* padding: 50px 20px; */
+        margin: 0 20px;
+        /* margin-right: 0; */
+        background: #00000028;
+        border-radius: 5px;
+        /* border: 1px solid red; */
+
+    }
+
+    .content-con {
+        font-size: 20px;
+    }
+    
+    .navbar-top-prod {
+        margin: 0 10px;
     }
 }
