--- a/style.css
+++ b/style.css
@@ -13,7 +13,12 @@
 nav {
     background: #000;
     color: white;
-    padding: 10px
+    padding: 10px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 0;
         /* border: 1px solid red; */
 }
 
